rust/foxglove/src/websocket/ws_protocol/client/snapshots/foxglove__websocket__ws_protocol__client__player_state__tests__encode.snap
---
source: rust/foxglove/src/websocket/ws_protocol/client/player_state.rs
assertion_line: 96
expression: message()
---
{
  "op": "playerState",
  "playing": "playing",
  "playbackSpeed": 1.0,
  "currentPlaybackTime": {
    "secs": 1234567,
    "nsecs": 890123456
  }
}
