rust/foxglove/src/websocket/ws_protocol/client/snapshots/foxglove__websocket__ws_protocol__client__player_state__tests__encode_buffering.snap
---
source: rust/foxglove/src/websocket/ws_protocol/client/player_state.rs
expression: "format!(\"{:#04x?}\", message_buffering().to_bytes())"
---
[
    0x03,
    0x02,
    0x00,
    0x00,
    0x80,
    0x3f,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
]
