rust/foxglove/src/websocket/ws_protocol/client/snapshots/foxglove__websocket__ws_protocol__client__player_state__tests__encode_paused.snap
---
source: rust/foxglove/src/websocket/ws_protocol/client/player_state.rs
assertion_line: 104
expression: "format!(\"{:#04x?}\", message.to_bytes())"
---
[
    0x03,
    0x01,
    0x00,
    0x00,
    0x80,
    0x3f,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
]
