rust/foxglove/src/websocket/ws_protocol/client/snapshots/foxglove__websocket__ws_protocol__client__player_state__tests__encode_with_previous_time.snap
---
source: rust/foxglove/src/websocket/ws_protocol/client/player_state.rs
assertion_line: 77
expression: message_with_previous_time
---
{
  "op": "playerState",
  "playing": "playing",
  "playbackSpeed": 1.0,
  "seekPlaybackTime": {
    "sec": 1000005,
    "nsec": 0
  },
  "seekPreviousPlaybackTime": {
    "sec": 1000000,
    "nsec": 500000000
  }
}
